--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,7 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./features.css');
+@import url('./video.css');
 @import url('./modal.css');
 
 :root {
