--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,6 +9,7 @@
 @import url('./hero.css');
 @import url('./features.css');
 @import url('./video.css');
+@import url('./team.css');
 @import url('./modal.css');
 
 :root {
