header, ten sections, footer

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,3 @@
 <section class="hero">
-  <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat,
-    cupiditate.
-  </p>
+  <p>Hero</p>
 </section>
