--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,9 +7,16 @@
 @import url('./reset.css');
 @import url('./header.css');
 @import url('./hero.css');
+@import url('./hero1.css');
 @import url('./features.css');
+@import url('./features1.css');
 @import url('./video.css');
+@import url('./video1.css');
 @import url('./team.css');
+@import url('./team1.css');
+@import url('./customers.css');
+@import url('./customers1.css');
+@import url('./footer.css');
 @import url('./modal.css');
 
 :root {
