--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,3 @@
 <header class="header">
-  <p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio, quam!
-  </p>
+  <p>Header</p>
 </header>
