--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,4 +1,41 @@
 .header {
-  padding: 20px 0;
-  background-color: #e4efc6;
+  display: block;
+  padding: 0;
+  margin: 0;
+  background: linear-gradient(
+    99deg,
+    rgba(0, 197, 235, 0.3) 0%,
+    rgba(181, 68, 254, 0.3) 100%
+  );
+  backdrop-filter: blur(17.5px);
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 72px;
+  padding: auto 16px;
+}
+.logo {
+  color: #fff;
+  margin-left: 16px;
+  font-family: Inter;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.menu {
+  display: inline-flex;
+  gap: 40px;
+  margin-right: 16px;
+}
+.menu-item {
+  color: #fff;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
