--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,12 @@
 <header class="header">
-  <p>Header</p>
+  <nav>
+    <a class="logo" href="index.html">Mobileapp</a>
+    <ul class="menu">
+      <li class="menu-item"><a href="#">Home</a></li>
+      <li class="menu-item"><a href="#">Features</a></li>
+      <li class="menu-item"><a href="#">Team</a></li>
+      <li class="menu-item"><a href="#">Testimonials</a></li>
+      <li class="menu-item"><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 </header>
