--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,3 +1,51 @@
 .hero {
-  background-color: #fbc7b9;
+  background: #06071b;
+
+  height: 684px;
+  flex-shrink: 0;
+}
+.title {
+  color: #fff;
+  font-family: Inter;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 18px;
+}
+.text {
+  color: #fff;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 28px;
+}
+.item {
+  color: #fff;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.bt {
+  color: #fff;
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  border-radius: 5px;
+  background: linear-gradient(99deg, #00c5eb 0%, #b544fe 100%);
+  padding: 11px 60px;
+}
+.container {
+  padding-top: 243px;
+  padding-left: 16px;
+}
+.list {
+  margin-bottom: 62px;
 }
