--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,3 +1,18 @@
 <section class="hero">
-  <p>Hero</p>
+  <div class="container">
+    <div class="container-hero">
+      <h1 class="title">Introducing Mobileapp</h1>
+      <p class="text">Download our mobile app today!</p>
+      <ul class="list">
+        <li class="item">
+          Real-time updates and notifications for timely information
+        </li>
+        <li class="item">
+          Robust analytics and reporting for data-driven insights
+        </li>
+        <li class="item">Offline capabilities for uninterrupted use</li>
+      </ul>
+      <button class="bt" type="button">Download</button>
+    </div>
+  </div>
 </section>
