--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -1,3 +1,22 @@
 <section class="customers">
-  <p>Customers</p>
+  <div class="container customers-container">
+    <!-- <p>Customers</p> -->
+    <h2 class="second-title">WHAT OUR COSTUMER`S SAY</h2>
+    <div class="thumb">
+      <img
+        class="customers-image"
+        src="../img/customers-section/customer.png"
+        alt="customer photo"
+      />
+    </div>
+    <h3 class="title third-title">Jon Doe</h3>
+    <p class="customers-text card-desc">Company Inc.</p>
+    <p class="customers-text card-info">
+      I've been using this app for a few weeks now and I have to say, I'm really
+      impressed. It's so easy to use and the personalized recommendations are
+      spot-on. Plus, the transactions are secure and the updates are always
+      timely. I would definitely recommend this app to anyone looking for a
+      better mobile experience
+    </p>
+  </div>
 </section>
