--- a/src/partials/video.html
+++ b/src/partials/video.html
@@ -1,3 +1,26 @@
 <section class="video">
-  <p>Video</p>
+  <h2 class="video-h2">Video</h2>
+  <p class="video-text">
+    Watch the video below to see our mobile app in action. With a user-friendly
+    interface, personalized recommendations, secure transactions, and real-time
+    updates, our app is available for download on both Apple and Android devices
+    and is designed to make your life easier.
+  </p>
+  <ul>
+    <li>
+      <a href="" class="" aria-label=""
+        ><svg class="icon" width="30" height="27">
+          <use href="./img/Video-Krystyna-img/Vector.svg"></use>
+        </svg>
+      </a>
+    </li>
+    <li>
+      <a href="" class="" aria-label=""
+        ><svg class="icon" width="32" height="36">
+          <use href="./img/Video-Krystyna-img/Vector (1).svg"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
+  <img class="" src="./img/Video-Krystyna-img/main.png" alt="" width="501" />
 </section>
