--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -7,6 +7,7 @@
 <!-- Несколько модальных окон -->
 
 <div class="modal" data-modal="1">
+  <h1>Download</h1>
   <!--   Svg иконка для закрытия окна  -->
   <svg
     class="modal__cross js-modal-close"
