--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -9,28 +9,28 @@
   <div class="team-container">
     <ul class="team-list">
       <li class="team-item">
-        <img />
+        <img href="" width="260" />
         <div class="team-wrapper">
           <h3 class="team-name">David Patel</h3>
           <p class="team-position">Managing Direcor</p>
         </div>
       </li>
       <li class="team-item">
-        <img />
+        <img href="" width="260" />
         <div class="team-wrapper">
           <h3 class="team-name">Rachel Kim</h3>
           <p class="team-position">Lead Designer</p>
         </div>
       </li>
       <li class="team-item">
-        <img />
+        <img href="" width="260" />
         <div class="team-wrapper">
           <h3 class="team-name">Samantha Chen</h3>
           <p class="team-position">Lead Developer</p>
         </div>
       </li>
       <li class="team-item">
-        <img />
+        <img href="" width="260" />
         <div class="team-wrapper">
           <h3 class="team-name">Andrew Nguyen</h3>
           <p class="team-position">Sr. UI Designer</p>
