--- a/src/partials/video1.html
+++ b/src/partials/video1.html
@@ -1,3 +1,16 @@
 <section class="video1">
-  <p>Video1</p>
+  <h1 class="video-title">WATCH THE VIDEO</h1>
+  <ul>
+    <li>
+      <p class="video-text">
+        Watch the video below to see our mobile app in action. With a
+        user-friendly interface, personalized recommendations, secure
+        transactions, and real-time updates, our app is available for download
+        on both Apple and Android devices and is designed to make your life
+        easier.
+      </p>
+    </li>
+    <li><img src="" width="478" alt="mobile product" /></li>
+    <li><img src="" width="501" alt="mobile product main" /></li>
+  </ul>
 </section>
