--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2,16 +2,16 @@
 
 .overlay {
   /* Скрываем подложку  */
-  opacity: 0;
-  visibility: hidden;
+  /* opacity: 0;
+  visibility: hidden; */
 
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 20;
+  background-color: rgba(200, 0, 0, 0.5);
+  /* z-index: 20; */
   transition: 0.3s all;
 }
 
@@ -19,11 +19,11 @@
 
 .modal {
   /* Скрываем окна  */
-  opacity: 0;
-  visibility: hidden;
+  /* opacity: 0;
+  visibility: hidden; */
 
-  /*  Установаем ширину окна  */
-  width: 100%;
+  /*  Устанавливаем ширину окна  */
+  width: 300px;
   max-width: 500px;
 
   /*  Центрируем и задаем z-index */
@@ -31,7 +31,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 30; /* Должен быть выше чем у подложки*/
+  z-index: 30;
+  /* Должен быть выше чем у подложки*/
 
   /*  Побочные стили   */
   box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
