--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2,15 +2,15 @@
 
 .overlay {
   /* Скрываем подложку  */
-  /* opacity: 0;
-  visibility: hidden; */
+  opacity: 0;
+  visibility: hidden;
 
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(200, 0, 0, 0.5);
+  background-color: rgba(235, 228, 228, 0.5);
   /* z-index: 20; */
   transition: 0.3s all;
 }
@@ -19,27 +19,30 @@
 
 .modal {
   /* Скрываем окна  */
-  /* opacity: 0;
-  visibility: hidden; */
+  opacity: 1;
+  /* visibility: hidden; */
 
   /*  Устанавливаем ширину окна  */
-  width: 300px;
-  max-width: 500px;
+  width: 500px;
+  height: 970px;
+  max-width: 668px;
+  min-height: 500px;
 
   /*  Центрируем и задаем z-index */
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-70%, -50%);
   z-index: 30;
   /* Должен быть выше чем у подложки*/
 
   /*  Побочные стили   */
   box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
   text-align: center;
-  padding: 30px;
+  padding: 32px 40px;
   border-radius: 3px;
-  background-color: #fff;
+  /* background-color: #e0d9d9; */
+  background: #06071B;
   transition: 0.3s all;
 }
 
@@ -61,4 +64,74 @@
   right: 20px;
   fill: #444;
   cursor: pointer;
+}
+
+.modal__title {
+  margin: 0 123px 28px 123px;
+  color: #FFF;
+  text-align: center;
+  font-family: Inter;
+  font-size: 24px;
+  line-height: 28px;
+
+}
+
+.modal-download-icons {
+  /* fill: blueviolet;
+  stroke: green;
+  border: 3px dashed green; */
+}
+
+.modal-container {
+  display: flex;
+  gap: 22px;
+}
+
+.modal-cont-list1,
+.modal-cont-list2 {
+  padding: 28px 22px 43px;
+  width: 220px;
+  height: 394px;
+}
+
+.modal-download-icons {
+
+  margin-bottom: 22px;
+}
+
+.modal-container>.modal-cont-list1 {
+  border-radius: 6px;
+  border: 3px solid #B544FE;
+  background: var(--linear, linear-gradient(99deg, #00C5EB 0%, #B544FE 100%));
+}
+
+
+
+.modal-container .modal-contal-list2 {
+  border-radius: 6px;
+  background: #06071B;
+
+}
+
+.modal-cont-list2 {
+  border: 3px solid #B544FE;
+
+}
+
+.modal-cont-list2>.modal-download-icons {
+  fill: #FFF;
+}
+
+.modal-download-link {
+  color: #FFF;
+  text-align: center;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  margin-top: 20px;
+}
+
+.modal-download-item {
+  margin-bottom: 20px;
 }
