--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -7,7 +7,6 @@
 <!-- Несколько модальных окон -->
 
 <div class="modal" data-modal="1">
-  <h1>Download</h1>
   <!--   Svg иконка для закрытия окна  -->
   <svg
     class="modal__cross js-modal-close"
@@ -46,5 +45,27 @@
       d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"
     />
   </svg>
-  <p class="modal__title">Заголовок окна 3</p>
+
+  <p class="modal__title">Download</p>
+  <div class="modal-container">
+    <div class="modal-cont-list1">
+      <svg class="modal-download-icons" width="80" height="106">
+        <use href="../img/icons.svg#download"></use>
+      </svg>
+      <ul class="modal-list">
+        <li class="modal-download-item">
+          <a class="modal-download-link" href="#">Download free plan</a>
+        </li>
+        <li class="modal-download-item">Basic functionality</li>
+        <li class="modal-download-item">Limited access</li>
+        <li class="modal-download-item">Community support</li>
+      </ul>
+    </div>
+    <div class="modal-cont-list2">
+      <svg class="modal-download-icons" width="80" height="106">
+        <use href="../img/icons.svg#download"></use>
+      </svg>
+      <li><a class="modal-download-link" href="#">Download for 20$</a></li>
+    </div>
+  </div>
 </div>
