--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -9,7 +9,7 @@
 <div class="modal" data-modal="1">
   <!--   Svg иконка для закрытия окна  -->
   <svg
-    class="modal__cross js-modal-close"
+    class="modal__cross js-modal-close data-modal-close"
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 24 24"
   >
@@ -37,7 +37,7 @@
 <div class="modal" data-modal="3">
   <!--   Svg иконка для закрытия окна  -->
   <svg
-    class="modal__cross js-modal-close"
+    class="modal__cross js-modal-close data-modal-close"
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 24 24"
   >
@@ -52,20 +52,59 @@
       <svg class="modal-download-icons" width="80" height="106">
         <use href="../img/icons.svg#download"></use>
       </svg>
+      <a class="modal-download-link" href="#">Download free plan</a>
       <ul class="modal-list">
         <li class="modal-download-item">
-          <a class="modal-download-link" href="#">Download free plan</a>
+          <svg class="modal-download-icon" width="14" height="14">
+            <use href="../img/icons.svg#left-arrow"></use>
+          </svg>
+          Basic functionality
         </li>
-        <li class="modal-download-item">Basic functionality</li>
-        <li class="modal-download-item">Limited access</li>
-        <li class="modal-download-item">Community support</li>
+        <li class="modal-download-item">
+          <svg class="modal-download-icon" width="14" height="14">
+            <use href="../img/icons.svg#left-arrow"></use>
+          </svg>
+          Limited access
+        </li>
+        <li class="modal-download-item">
+          <svg class="modal-download-icon" width="14" height="14">
+            <use href="../img/icons.svg#left-arrow"></use>
+          </svg>
+          Community support
+        </li>
       </ul>
     </div>
     <div class="modal-cont-list2">
       <svg class="modal-download-icons" width="80" height="106">
         <use href="../img/icons.svg#download"></use>
       </svg>
-      <li><a class="modal-download-link" href="#">Download for 20$</a></li>
+      <a class="modal-download-link" href="#">Download for 20$</a>
+      <ul class="modal-list">
+        <li class="modal-download-item">
+          <svg class="modal-download-icon" width="14" height="14">
+            <use href="../img/icons.svg#left-arrow"></use>
+          </svg>
+          Ad-free experience
+        </li>
+        <li class="modal-download-item">
+          <svg class="modal-download-icon" width="14" height="14">
+            <use href="../img/icons.svg#left-arrow"></use>
+          </svg>
+          Unlock exclusive features
+        </li>
+        <li class="modal-download-item">
+          <svg class="modal-download-icon" width="14" height="14">
+            <use href="../img/icons.svg#left-arrow"></use>
+          </svg>
+          Content for the ultimate mobile experience
+        </li>
+      </ul>
     </div>
   </div>
+  <p class="modal-sub">
+    Nunc vulputate nibh sed congue facilisis. Curabitur posuere scelerisque
+    neque. In sit amet lectus non lacus
+  </p>
+  <div></div>
+  <button class="download-btn" type="button">Download</button>
 </div>
