--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(235, 228, 228, 0.5);
-  /* z-index: 20; */
+  z-index: 20;
   transition: 0.3s all;
 }
 
@@ -32,7 +32,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-70%, -50%);
+  transform: translate(-70%, -47%);
   z-index: 30;
   /* Должен быть выше чем у подложки*/
 
@@ -64,6 +64,7 @@
   right: 20px;
   fill: #444;
   cursor: pointer;
+  fill: #FFF;
 }
 
 .modal__title {
@@ -85,13 +86,15 @@
 .modal-container {
   display: flex;
   gap: 22px;
+
+
 }
 
 .modal-cont-list1,
 .modal-cont-list2 {
   padding: 28px 22px 43px;
   width: 220px;
-  height: 394px;
+  height: 344px;
 }
 
 .modal-download-icons {
@@ -123,16 +126,59 @@
 }
 
 .modal-download-link {
+  display: inline-block;
   color: #FFF;
   text-align: center;
   font-family: Inter;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
+  margin-bottom: 20px;
 }
 
 .modal-download-item {
-  margin-bottom: 20px;
+  display: flex;
+  align-items: baseline;
+  ;
+  gap: 4px;
+  width: auto;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: left;
+
+}
+
+.modal-download-item:not(:last-child) {
+  margin-bottom: 14px;
+}
+
+.modal-download-icon {
+  display: flex;
+  flex-shrink: 0;
+
+}
+
+.download-btn {
+  padding: 12px 60px;
+  color: #FFF;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 700;
+  border-radius: 5px;
+  background: linear-gradient(99deg, #00C5EB 0%, #B544FE 100%);
+}
+
+.modal-sub {
+  color: #FFF;
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  text-align: left;
+  margin-top: 32px;
+  margin-bottom: 32px;
 
 }
