--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -47,6 +47,7 @@
   </svg>
 
   <p class="modal__title">Download</p>
+  <!-- First Block  -->
   <div class="modal-container">
     <div class="modal-cont-list1">
       <svg class="modal-download-icons" width="80" height="106">
@@ -105,6 +106,38 @@
     Nunc vulputate nibh sed congue facilisis. Curabitur posuere scelerisque
     neque. In sit amet lectus non lacus
   </p>
-  <div></div>
+  <!-- Second Block  -->
+  <div>
+    <ul class="">
+      <svg class="" width="28" height="28">
+        <use href=""></use>
+      </svg>
+      <li>
+        <p>App name</p>
+        <a href="#">Mobileapp.layout</a>
+      </li>
+      <svg class="" width="28" height="28">
+        <use href=""></use>
+      </svg>
+      <li>
+        <p>License</p>
+        <a href="#">Free</a>
+      </li>
+      <svg class="" width="28" height="28">
+        <use href=""></use>
+      </svg>
+      <li>
+        <p>Author</p>
+        <a href="#">Mobile Marrket App.com</a>
+      </li>
+      <svg class="" width="28" height="28">
+        <use href=""></use>
+      </svg>
+      <li>
+        <p>Data</p>
+        <a href="#">21.02.2022</a>
+      </li>
+    </ul>
+  </div>
   <button class="download-btn" type="button">Download</button>
 </div>
