Last update Done

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -12,7 +12,9 @@
         </li>
         <li class="item">Offline capabilities for uninterrupted use</li>
       </ul>
-      <button class="bt" type="button">Download</button>
+      <button class="bt js-open-modal" type="button" data-modal="3">
+        Download
+      </button>
     </div>
   </div>
 </section>
