--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -185,3 +185,12 @@
    |  Second Block
    |============================
  */
+
+
+.second-download-list {}
+
+.second-download-item {}
+
+.second-download-box {}
+
+.second-download-link {}
