--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -108,34 +108,34 @@
   </p>
   <!-- Second Block  -->
   <div>
-    <ul class="">
+    <ul class="second-download-list">
       <svg class="" width="28" height="28">
         <use href=""></use>
       </svg>
-      <li>
-        <p>App name</p>
-        <a href="#">Mobileapp.layout</a>
+      <li class="second-download-item">
+        <p class="second-download-box">App name</p>
+        <a class="second-download-link" href="#">Mobileapp.layout</a>
       </li>
       <svg class="" width="28" height="28">
         <use href=""></use>
       </svg>
-      <li>
-        <p>License</p>
-        <a href="#">Free</a>
+      <li class="second-download-item">
+        <p class="second-download-box">License</p>
+        <a class="second-download-link" href="#">Free</a>
       </li>
       <svg class="" width="28" height="28">
         <use href=""></use>
       </svg>
-      <li>
-        <p>Author</p>
-        <a href="#">Mobile Marrket App.com</a>
+      <li class="second-download-item">
+        <p class="second-download-box">Author</p>
+        <a class="second-download-link" href="#">Mobile Marrket App.com</a>
       </li>
       <svg class="" width="28" height="28">
         <use href=""></use>
       </svg>
-      <li>
-        <p>Data</p>
-        <a href="#">21.02.2022</a>
+      <li class="second-download-item">
+        <p class="second-download-box">Data</p>
+        <a class="second-download-link" href="#">21.02.2022</a>
       </li>
     </ul>
   </div>
