--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -107,36 +107,82 @@
     neque. In sit amet lectus non lacus
   </p>
   <!-- Second Block  -->
-  <div>
+  <div class="second-full-container">
     <ul class="second-download-list">
-      <svg class="" width="28" height="28">
-        <use href=""></use>
-      </svg>
-      <li class="second-download-item">
-        <p class="second-download-box">App name</p>
-        <a class="second-download-link" href="#">Mobileapp.layout</a>
-      </li>
-      <svg class="" width="28" height="28">
-        <use href=""></use>
-      </svg>
-      <li class="second-download-item">
-        <p class="second-download-box">License</p>
-        <a class="second-download-link" href="#">Free</a>
-      </li>
-      <svg class="" width="28" height="28">
-        <use href=""></use>
-      </svg>
-      <li class="second-download-item">
-        <p class="second-download-box">Author</p>
-        <a class="second-download-link" href="#">Mobile Marrket App.com</a>
-      </li>
-      <svg class="" width="28" height="28">
-        <use href=""></use>
-      </svg>
-      <li class="second-download-item">
-        <p class="second-download-box">Data</p>
-        <a class="second-download-link" href="#">21.02.2022</a>
-      </li>
+      <div class="second-download-container">
+        <svg class="second-download-icon" width="28" height="28">
+          <use href="../img/icons.svg#text-filled"></use>
+        </svg>
+        <li class="second-download-item">
+          <p class="second-download-box">App name</p>
+          <a class="second-download-link" href="#">Mobileapp.layout</a>
+        </li>
+      </div>
+      <div class="second-download-container">
+        <svg class="second-download-icon" width="28" height="28">
+          <use href="../img/icons.svg#zip-fill"></use>
+        </svg>
+        <li class="second-download-item">
+          <p class="second-download-box">License</p>
+          <a class="second-download-link" href="#">Free</a>
+        </li>
+      </div>
+      <div class="second-download-container">
+        <svg class="second-download-icon" width="28" height="28">
+          <use href="../img/icons.svg#calendar"></use>
+        </svg>
+        <li class="second-download-item">
+          <p class="second-download-box">Author</p>
+          <a class="second-download-link" href="#">Mobile Marrket App.com</a>
+        </li>
+      </div>
+      <div class="second-download-container">
+        <svg class="second-download-icon" width="28" height="28">
+          <use href="../img/icons.svg#carbon_user"></use>
+        </svg>
+        <li class="second-download-item">
+          <p class="second-download-box">Data</p>
+          <a class="second-download-link" href="#">21.02.2022</a>
+        </li>
+      </div>
+    </ul>
+    <ul class="second-download-list">
+      <div class="second-download-container">
+        <svg class="second-download-icon" width="28" height="28">
+          <use href="../img/icons.svg#text-filled"></use>
+        </svg>
+        <li class="second-download-item">
+          <p class="second-download-box">App name</p>
+          <a class="second-download-link" href="#">Mobileapp.layout</a>
+        </li>
+      </div>
+      <div class="second-download-container">
+        <svg class="second-download-icon" width="28" height="28">
+          <use href="../img/icons.svg#zip-fill"></use>
+        </svg>
+        <li class="second-download-item">
+          <p class="second-download-box">License</p>
+          <a class="second-download-link" href="#">Free</a>
+        </li>
+      </div>
+      <div class="second-download-container">
+        <svg class="second-download-icon" width="28" height="28">
+          <use href="../img/icons.svg#calendar"></use>
+        </svg>
+        <li class="second-download-item">
+          <p class="second-download-box">Author</p>
+          <a class="second-download-link" href="#">Mobile Marrket App.com</a>
+        </li>
+      </div>
+      <div class="second-download-container">
+        <svg class="second-download-icon" width="28" height="28">
+          <use href="../img/icons.svg#carbon_user"></use>
+        </svg>
+        <li class="second-download-item">
+          <p class="second-download-box">Data</p>
+          <a class="second-download-link" href="#">21.02.2022</a>
+        </li>
+      </div>
     </ul>
   </div>
   <button class="download-btn" type="button">Download</button>
