--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
       <li class="menu-item"><a href="#">Features</a></li>
       <li class="menu-item"><a href="#">Team</a></li>
       <li class="menu-item"><a href="#">Testimonials</a></li>
-      <li class="menu-item"><a href="#">Contact</a></li>
+      <li class="menu-item"><a href="#">Contact!</a></li>
     </ul>
   </nav>
 </header>
